--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   google_sign_in: ^7.2.0
   provider: ^6.1.5+1
   iconsax: ^0.0.8
+  flutter_facebook_auth: ^7.1.2
+  image_picker: ^1.2.1
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
