--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_facebook_auth: ^7.1.2
   image_picker: ^1.2.1
   http: ^1.6.0
+  file_picker: ^10.3.7
 
 dev_dependencies:
   flutter_test:
