--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   image_picker: ^1.2.1
   http: ^1.6.0
   file_picker: ^10.3.7
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
