--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   file_picker: ^10.3.7
   shimmer: ^3.0.0
   intl: ^0.20.2
+  flutter_bkash: ^0.3.1
+  flutter_sslcommerz: ^3.0.1
+  nagad_payment_gateway: ^0.3.1
+  fluttertoast: ^9.0.0
 
 dev_dependencies:
   flutter_test:
